--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Kieran CANTER</h1>
       <h2>Software Engineer</h1>
       <h3><a href="mailto:contact@kierancanter.dev">contact@kierancanter.dev</a></h3>
-      <h3><a href="tel:240-818-4463">240-818-4463</h3>
+      <h3><a href="tel:2408184463">240 818 4463</h3>
     </div>
   </div>
   
