--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Kieran CANTER</h1>
       <h2>Software Engineer</h1>
       <h3><a href="mailto:contact@kierancanter.dev">contact@kierancanter.dev</a></h3>
-      <h3><a href="tel:12402846363">+1 240 284 6363</h3>
+      <h3><a href="tel:12402846363">+1 240.284.6363</h3>
     </div>
   </div>
   
